; ModuleID = '/home/carl/AnghaBench/db_tutorial/extr_db.c_set_node_root.c'
source_filename = "/home/carl/AnghaBench/db_tutorial/extr_db.c_set_node_root.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IS_ROOT_OFFSET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_node_root(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  store i32 %6, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = load i32, i32* @IS_ROOT_OFFSET, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr i8, i8* %8, i64 %10
  %12 = bitcast i8* %11 to i32*
  store i32 %7, i32* %12, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
